@@ -1,5 +1,5 @@
 #! /bin/sh
-# Copyright (C) 1996, 2001, 2002, 2003  Free Software Foundation, Inc.
+# Copyright (C) 1996, 2001, 2002, 2003, 2006  Free Software Foundation, Inc.
 #
 # This file is part of GNU Automake.
 #
@@ -19,22 +19,38 @@
 # Boston, MA 02110-1301, USA.
 
 # Test to make sure subdirs in EXTRA_DIST work.  Also tests to make
-# sure "./" is ignored.
+# sure "./" is ignored and *srcdir properly handled.
 
 . ./defs || exit 1
 
 set -e
 
+echo AC_OUTPUT >>configure.in
+
 cat > Makefile.am << 'END'
-EXTRA_DIST = foo/bar ./joe
+EXTRA_DIST = foo/bar ./joe $(top_srcdir)/woo/doo $(srcdir)/dada
+check-local:
+	test -f $(srcdir)/foo/bar
+	test -f $(srcdir)/woo/doo
+	test -f $(srcdir)/joe
+	test -f $(srcdir)/dada
 END
 
 $ACLOCAL
+$AUTOCONF
 $AUTOMAKE
 
+mkdir foo woo
+touch foo/bar joe woo/doo dada
+
 grep '\$(mkdir_p).*\.' Makefile.in && exit 1
+grep '\$(mkdir_p).*srcdir' Makefile.in && exit 1
 grep '\$(mkdir_p).*foo' Makefile.in
 
 # Check to make sure `foo' isn't made in build directory.
 grep 'mkdir_p.*foo.*foo' Makefile.in && exit 1
+
+./configure --prefix `pwd`
+$MAKE distcheck
+
 exit 0
