@@ -1,5 +1,15 @@
+2006-01-05  Stepan Kasal  <kasal@ucw.cz>
+	    Alexandre Duret-Lutz  <adl@gnu.org>
+
+	* automake.in (top_srcdir): New global.
+	(generate_makefile): Compute it.
+	(fill_dist_dirs): New function extracted from handle_dist.
+	(handle_dist, handle_configure): Use fill_dist_dirs.
+	* tests/distdir.test: Test for cases where $(top_srcdir) or
+	$(srcdir) appear in EXTRA_DIST.  Report from Sander Niemeijer.
+
 2006-01-05  Zack Weinberg  <zackw@panix.com>
-	Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+	    Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
 	* lib/depcomp: Add 'ia64hp' dependency style.
 	Zack's original patch was contributed to GCC on 2005-06-13.
